# matprop-ml

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOGS.md  LICENSE  README.md  docker-compose.yml
agent_core/: .env.example  DOCUMENTACION.md  DOCUMENTATION_AGENT_CORE.md  Dockerfile  TECHNICAL_DOCUMENTATION_AGENT_CORE.md  requirements.txt
agent_core/src/: pytest.ini
agents/: .env.example  DOCUMENTACION.md  DOCUMENTATION_AGENTS.md  Dockerfile  TECHNICAL_DOCUMENTATION_AGENTS.md  requirements.txt
backend_llm/: DOCUMENTACION.md  Dockerfile  requirements.txt
backend_llm/src/: app.py  chat_agent.py  config.py
backend_ml/: DOCUMENTACION.md  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend_ml/src/matprop_ml/api/: app.py  router.py
backend_ml/src/matprop_ml/api/v1/: router.py  schema.py  service.py
backend_ml/src/matprop_ml/config/: config.py
backend_ml/src/matprop_ml/models/: build_layout.py  download_models.py  loader.py  material_predictor.py  predictor.py  registry.py
backend_ml/src/matprop_ml/prediction/: schema.py
backend_ml/src/test/: conftest.py  test_api_predict.py  test_download_megnet.py  test_models.py
common/: CONFIGURATION_INTEGRATION.md  CONFIGURATION_LOADER_IMPLEMENTATION_SUMMARY.md  __init__.py  config.py  config_client.py  config_integration_example.py  test_config.py
config_store/: config.json
config_store/backups/: env_backup_20260427_151652.env
frontend/: DOCUMENTACION.md  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: env.client.ts
llamat2-chat/: Dockerfile  requirements.txt
llamat2-chat/src/: app.py  config.py  model.py  preload_model.py
notebooks/: prueba.ipynb
sdd/Centralized Configuration System/: apply-progress  migration-summary.md  (+3 more)
(+243 files in other folders)
