[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matprop-ml"
version = "0.1.0"
description = "Material property prediction toolkit (MVP)"
authors = [
    { name = "Wilhelm David Buitrago Garcia", email = "wilhelm18.buitrago@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

# Dependencias de tu paquete
dependencies = [
    "requests==2.32.3",
    "charset-normalizer==3.4.1",
    "chardet==5.2.0",
    "ruamel.yaml==0.17.21",
    "numpy==1.25.0",
    "megnet==1.3.2",
    "tensorflow<2.14",
    "keras<3.0",
    "pymatgen==2024.7.18",
    "mp_api==0.45.13",
    "fastapi==0.115.11"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
